[package]
name = "tpbackup"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/akozhemiakin/tpbackup"
description = """
CLI utility that allows to backup Targetprocess resources.
"""

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros", "io-std", "tracing"] }
tokio-fs = "0.1.7"
thiserror = "1.0.44"
url = "2.4.0"
base64 = "0.21.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
indicatif = "0.17.6"
futures = "0.3.28"
tar = "0.4"
flate2 = "1"
chrono = "0.4"
async-trait = "0.1.73"

[profile.release]
# Options to reduce binary size in release mode
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*